# folder-sync-rs

./: .gitignore  CHENGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  log4rs.yaml
docs/: config.json.xlsx  system.drawio
src/: backup.rs  commands.rs  config.json  config.rs  folders.rs  main.rs  messages.rs  utils.rs
