[package]
name = "folder-sync-rs"
version = "0.0.2"
edition = "2021"
description = "共有フォルダとバックアップ用のSSD間の同期ツール"

[profile.release]
opt-level = 3 # 最適化レベル3
lto = true    # Link Time Optimizationを有効化
codegen-units = 1 # コード生成ユニット数を1に設定
panic = 'abort' # パニック時にプログラムを終了

[build-dependencies]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
indicatif = "0.17.11"
log = "0.4.26"
log4rs = "1.3.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
# simplelog = "0.12.2"
